--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "node-mysql-sp-crud",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rahulbana/node-mysql-sp-crud-demo.git"
+  },
   "keywords": [],
-  "author": "",
+  "author": "Rahul Singh Bana",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
